[gd_scene load_steps=11 format=1]

[ext_resource path="res://Sprites/font/silc_8.fnt" type="BitmapFont" id=1]
[ext_resource path="res://Scenes/gui/inventory_gui.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Atlas/SourceImages/gui/gui_area.png" type="Texture" id=3]
[ext_resource path="res://Sprites/font/8font.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Scenes/gui/equipped_items.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/Atlas/gui/small_button_up.atex" type="Texture" id=6]
[ext_resource path="res://Sprites/Atlas/gui/small_button_down.atex" type="Texture" id=7]
[ext_resource path="res://Sprites/Atlas/gui/small_button_hover.atex" type="Texture" id=8]

[sub_resource type="Theme" id=1]

default_font = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[node name="inventory_gui" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 2 )

[node name="inventory_items" type="Container" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 16.0
margin/right = -72.0
margin/bottom = -120.0

[node name="Inventory_label_area" type="Patch9Frame" parent="inventory_items"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -16.0
margin/right = 112.0
margin/bottom = 0.0

[node name="Patch9Frame1" type="Patch9Frame" parent="inventory_items/Inventory_label_area"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 112.0
margin/bottom = 16.0
texture = ExtResource( 3 )
patch_margin/left = 2
patch_margin/top = 2
patch_margin/right = 2
patch_margin/bottom = 2

[node name="INVENTORY_LABEL" type="Label" parent="inventory_items/Inventory_label_area"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 56.0
margin/bottom = 8.0
custom_fonts/font = ExtResource( 4 )
text = "Inventory"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Patch9Frame" type="Patch9Frame" parent="inventory_items"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 112.0
margin/bottom = 144.0
texture = ExtResource( 3 )
patch_margin/left = 2
patch_margin/top = 2
patch_margin/right = 2
patch_margin/bottom = 2

[node name="grid" type="GridContainer" parent="inventory_items"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 6.0
margin/top = 6.0
margin/right = 6.0
margin/bottom = 6.0
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 5

[node name="equipped_items" parent="." instance=ExtResource( 5 )]

margin/left = 112.0
margin/right = 224.0

[node name="char_info" type="Container" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 224.0
margin/top = 16.0
margin/right = 352.0
margin/bottom = 160.0

[node name="char_info_label_area" type="Patch9Frame" parent="char_info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -16.0
margin/right = 128.0
margin/bottom = 0.0

[node name="Patch9Frame3" type="Patch9Frame" parent="char_info/char_info_label_area"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 128.0
margin/bottom = 16.0
texture = ExtResource( 3 )
patch_margin/left = 2
patch_margin/top = 2
patch_margin/right = 2
patch_margin/bottom = 2

[node name="CHAR_INFO" type="Label" parent="char_info/char_info_label_area"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 8.0
custom_fonts/font = ExtResource( 4 )
text = "STATS"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Patch9Frame2" type="Patch9Frame" parent="char_info"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 128.0
margin/bottom = 144.0
texture = ExtResource( 3 )
patch_margin/left = 2
patch_margin/top = 2
patch_margin/right = 2
patch_margin/bottom = 2

[node name="1st" type="VBoxContainer" parent="char_info"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 16.0
margin/right = 125.0
margin/bottom = 60.0
alignment = 0

[node name="name_container" type="PanelContainer" parent="char_info/1st"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 122.0
margin/bottom = 7.0
custom_styles/panel = SubResource( 2 )

[node name="label" type="Label" parent="char_info/1st/name_container"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 122.0
margin/bottom = 7.0
custom_fonts/font = ExtResource( 4 )
text = "Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="name" type="Label" parent="char_info/1st/name_container"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 122.0
margin/bottom = 7.0
custom_fonts/font = ExtResource( 4 )
text = "Name"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="health_container" type="PanelContainer" parent="char_info/1st"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 11.0
margin/right = 122.0
margin/bottom = 18.0
custom_styles/panel = SubResource( 2 )

[node name="label" type="Label" parent="char_info/1st/health_container"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 122.0
margin/bottom = 7.0
custom_fonts/font = ExtResource( 4 )
text = "health"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="health" type="Label" parent="char_info/1st/health_container"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 122.0
margin/bottom = 7.0
custom_fonts/font = ExtResource( 4 )
text = "health"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ac_container" type="PanelContainer" parent="char_info/1st"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 22.0
margin/right = 122.0
margin/bottom = 29.0
custom_styles/panel = SubResource( 2 )

[node name="label" type="Label" parent="char_info/1st/ac_container"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 122.0
margin/bottom = 7.0
custom_fonts/font = ExtResource( 4 )
text = "ac"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ac" type="Label" parent="char_info/1st/ac_container"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 122.0
margin/bottom = 7.0
custom_fonts/font = ExtResource( 4 )
text = "ac"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="close_button" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 300.0
margin/top = 138.0
margin/right = 342.0
margin/bottom = 154.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
textures/hover = ExtResource( 8 )

[node name="Label" type="Label" parent="close_button"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 8.0
margin/top = 3.0
margin/right = 36.0
margin/bottom = 16.0
text = "close"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


